Move inline styles to external css file (6/6)

--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -20,7 +20,7 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2" style="height:30px;"  alt="ZhuoFan">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,7 +56,7 @@
     <div class="row ">
         <div class="col-12 ">
 
-            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control" style="position:relative;top:30%;:500px;height:60px;outline:none;font-size: 40px;border:1px solid grey;border-radius:5px;" placeholder="Search..">
+            <input type="text" id="sbar" onkeyup="searchfeature()" class="form-control searchbarcss" placeholder="Search..">
             <br>
             <div class="col-12 " style="position:relative;top:30%;">
                 <table class="table table-light" id="searchtable" style="border-collapse: separate;display:none;">
@@ -94,14 +94,14 @@
     <div class="container">
         <div class="row text-center textfly">
             <div class="col-12 text-center">
-                <img alt="DAAA Class Photo" class='greyscale' id="daaaimg" src="../spphoto/daaa.jpg" style="width:696px; height:500px;">
+                <img alt="DAAA Class Photo" class='greyscale daaacoverphoto' id="daaaimg" src="../spphoto/daaa.jpg" >
 
             </div>
             <div class="col-12 text-center">
                 <br><br>
                 <h1>Singapore Polytechnic Experience</h1>
                 <p>View first impressions and things about Singapore Polytechnic</p>
-                <img  onclick="window.location.href='sp.html#spsection1';" src="../svg/arrow-down-square.svg" alt="arrow" style="height:50px;cursor:pointer;">
+                <img  onclick="window.location.href='sp.html#spsection1';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
             </div>
         </div>
     </div>
@@ -109,20 +109,20 @@
 <div class="container margintop" id="spsection1">
     <div class="row"  id="spsection">
         <div class="col-md-6 col-sm-12">
-            <h1>First <span style="color:royalblue" class="typing" id="type" ></span><span style="color:royalblue" class="cursor">|</span> </h1>
+            <h1>First <span  class="typing royalblue" id="type" ></span><span  class="cursor royalblue">|</span> </h1>
             <p>It has been 11 days since school started. When I first walked into SP on 14 April 2021 for a freshman orientation program, I was actually kind of excited to meet new people and see new things. My first impression of SP is that it is really big. There are many buildings in SP which some are pretty cool. They are built in different styles. When I was like trying to find my way to T22 that day, I spend like 20 minutes trying to find and walk there. There are so many stairs and turns which is kind of confusing. Luckily, after walking a few times, at least now I can find my way to T22, T21, T19, and FC6.My first impression towards my personal tutor and classmate are quite good as I felt that they are quite welcoming and nice.We bonded well together during the orientation programme despite it being quite short. </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end justify-content-end d-flex align-item-end">
-            <div id="carouselExampleSlidesOnly"  style='width:500px;height:400px;box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;' class=" carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselExampleSlidesOnly"   class="spcarouselphoto1 carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div data-bs-interval="1700" class="carousel-item active">
-                        <img src="../spphoto/sp.jpg" style="height:400px;" class="d-block w-100"  alt="...">
+                        <img src="../spphoto/sp.jpg"  class="d-block w-100 spcarouselphoto"  alt="...">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/walk.jpg"  style="height:400px;" class="d-block w-100"  alt="...">
+                        <img src="../spphoto/walk.jpg"   class="d-block w-100 spcarouselphoto"  alt="...">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/t21.jpg" style="height:400px;" class="d-block w-100" alt="...">
+                        <img src="../spphoto/t21.jpg" class="d-block w-100 spcarouselphoto" alt="...">
                     </div>
                 </div>
             </div>
@@ -133,10 +133,10 @@
     <div class="container" >
         <div class="row" id="studysection">
             <div class="col-sm-12 col-md-6">
-<img src="../spphoto/Studying.svg" id="study" style="height:300px;" alt="study" class="greyscale">
+<img src="../spphoto/Studying.svg" id="study"  alt="study" class="greyscale studysvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
-    <h1><span style="color:orangered">Classmates</span> And <span style="color:purple">Classroom</span></h1>
+    <h1><span class="orangered">Classmates</span> And <span class="purplecolor">Classroom</span></h1>
     <p>My class is a comparably small class which only consists of 19 people. They are quite helpful, when I have doubts and questions, they will be able to help/answer me. I do have fun interacting with them. For some of the people in the class, I have already known them previously as we have a small WhatsApp group for DAAA.So like it is quite easy for me to mix with them. I have also made nice friends in class like Gabriel, Justin, David, and Ella. We often hang out together to study or to have lunch.</p>
     <p>The classes in SP are very different compared to secondary school. In secondary school, there is a fixed classroom for lessons and 1 class there are about 40 people. In contrast, in SP, there are separate classrooms for different modules and there are only 19-20 people per class. Most importantly, there is an air-con in every classroom so the environment is quite conducive for learning.</p>
 </div>
@@ -146,7 +146,7 @@
 <div class="container margintop">
     <div class="row" id="splesson">
 <div class="col-sm-12 col-md-6">
-    <h1><span style="color:forestgreen">Lessons</span> In SP</h1>
+    <h1><span class="forestgren">Lessons</span> In SP</h1>
     <p>Well, for the lessons, the lessons in SP are very intensive, there are a lot of things about self-directed learning and personal responsibility so time management is important. We need to do extra search-ups after school so that we will have a better understanding of things taught in class. Additionally, the people in my class are all muggers so since the first week of school, I had been staying up till 2 am to do my module work. With CA2, coming in less than a month, the workload has become heavier and more time has to be spent. For poly, it is unlike secondary when your teachers will chase you for your homework if you never do. In SP, everything is on yourself, you need to take the initiative to check on various things and if you are late for an assignment, it is equivalent to 0 marks. However, the teachers I have met are really kind as they answered all the doubts I have in lessons and have tried to help me a lot with the assignments.</p>
 </div>
         <div class="col-sm-12 col-md-6 d-flex justify-content-end align-content-end ">
@@ -158,10 +158,10 @@
     <div class="container" id="foodsection">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-<img src="../spphoto/fast-food.svg" style="height: 300px;" id="food" alt="food" class="greyscale">
+<img src="../spphoto/fast-food.svg"  id="food" alt="food" class="greyscale foodsvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
-    <h1><span style="color:goldenrod">Food</span> In SP</h1>
+    <h1><span class="golden">Food</span> In SP</h1>
     <p>For food in SP, the chicken rice and the Taiwanese food in FC4 is the best !! .The food is nice and the price is also affordable. The waffle and the teriyaki ball store in FC6 are the second best. (Personal opinion). But as FC4 is a bit far from T2X, so for convenience wise, I visited FC6 more frequently as it is just below T2X. Till today, I have only managed to visit FC4,5and 6 . Hope that one day can have a chance to visit FC1-3 too HAHA. But overall, I think every food court has something special.</p>
 </div>
         </div>
@@ -171,19 +171,19 @@
     <div class="row">
 
 <div class="col-sm-12 col-md-6 ">
-    <h1>Lastly...<span style="color:rosybrown" >Conclusion</span></h1>
+    <h1>Lastly...<span class="rosybrown" >Conclusion</span></h1>
     <p>Well, SP is really big and I have just only explored a small part of it (sometimes I still get lost) so in the next 3 years of polytechnic life, there is a lot for me to explore. Academics-wise, I will put in 120% in every assignment, hopefully, I can get a 4.0 GPA in the end, continue my studies and eventually achieve my dream.</p>
 </div>
         <div class="col-sm-12 col-md-6 text-end ">
-            <img src="../spphoto/sp-logo.png" alt="sp logo" style="position:relative;top:50px;">
+            <img src="../spphoto/sp-logo.png" alt="sp logo" class="splogo">
         </div>
     </div>
 </div>
-<div class=" position-fixed bottom-0 end-0 p-3" style="z-index: 99;">
+<div class="zindex99 position-fixed bottom-0 end-0 p-3">
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg" style="width:25px;" class="rounded me-2" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
