Correct photo center properties in index page

--- a/html-files/index.html
+++ b/html-files/index.html
@@ -162,7 +162,7 @@
            <br>
        </div>
 <!--Unconfirmed div ,may consider changing in later date-->
-           <div class=" offset-1 col-11 container text-center d-flex justify-content-center">
+           <div class="col-12 container text-center d-flex justify-content-center">
                <div id="carouselExampleCaptions" class="carousel slide carousel-fade carouselsetting"  data-bs-ride="carousel">
                    <!--Number of indicator-->
                    <div class="carousel-indicators">
