Add in proper alt for all images and improve overall structure

--- a/html-files/about.html
+++ b/html-files/about.html
@@ -21,8 +21,8 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | About Me &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <br><br>
                 <h1><span id="timegreeting"></span></h1>
                 <p>Welcome to about me page ,know more about me ! :)</p>
-                <img  onclick="window.location.href='about.html#aboutmeover'" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
+                <img  onclick="window.location.href='about.html#aboutmeover'" src="../svg/arrow-down-square.svg" alt="Icon of arrow down" class="square">
             </div>
              <script src="../js/detecthouranimation.js"></script>
         </div>
@@ -133,7 +133,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-<img src="../aboutmephoto/use.jpg" alt="look at sky" id="photofly" class="textfly photoeffectabout" >
+<img src="../aboutmephoto/use.jpg" alt="Image of ZhuoFan at Science Center" id="photofly" class="textfly photoeffectabout" >
             </div>
             <div class="col-md-6 col-sm-12 text-end">
                 <div class="contain">
@@ -376,16 +376,16 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/sgc.png" class="card-img-top testimonial"  alt="...">
+                    <img src="../testimonialpdf/sgc.png" class="card-img-top testimonial"  alt="Preview of Testimonial 1">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 1</h5>
                         <p class="card-text">Written by Dunearn Secondary School</p>
-                        <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#exampleModal" data-bs-target="#exampleModal">View</button>
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#testiModal1" data-bs-target="#testiModal1">View</button>
+                        <div class="modal fade" id="testiModal1" tabindex="-1" aria-labelledby="testiModal1Label" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel">Secondary Graduation Testimonial</h5>
+                                        <h5 class="modal-title" id="testiModal1Label">Secondary Graduation Testimonial</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -405,16 +405,16 @@
 
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test1.png" class="card-img-top testimonial"  alt="...">
+                    <img src="../testimonialpdf/test1.png" class="card-img-top testimonial"  alt="Preview of Testimonial 2">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 2</h5>
                         <p class="card-text">Written by Ms Sarah Chan</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"  data-target="#Modal1"  data-bs-target="#Modal1">View</button>
-                        <div class="modal fade" id="Modal1" tabindex="-1" aria-labelledby="exampleModalLabel2" aria-hidden="true">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"  data-target="#testiModal2"  data-bs-target="#testiModal2">View</button>
+                        <div class="modal fade" id="testiModal2" tabindex="-1" aria-labelledby="testiModalLabel2" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel2">Testimonial 2</h5>
+                                        <h5 class="modal-title" id="testiModalLabel2">Testimonial 2</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -433,16 +433,16 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test2.png" class="card-img-top testimonial" alt="...">
+                    <img src="../testimonialpdf/test2.png" class="card-img-top testimonial" alt="Preview of Testimonial 3">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 3</h5>
                         <p class="card-text">Written by Ms Chua Sock Sian</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#Modal2"  data-bs-target="#Modal2">View</button>
-                        <div class="modal fade" id="Modal2" tabindex="-1" aria-labelledby="exampleModalLabel5" aria-hidden="true">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#testiModal3"  data-bs-target="#testiModal3">View</button>
+                        <div class="modal fade" id="testiModal3" tabindex="-1" aria-labelledby="testiModalLabel3" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel5">Testimonial 3</h5>
+                                        <h5 class="modal-title" id="testiModalLabel3">Testimonial 3</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -461,16 +461,16 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="../testimonialpdf/test3.png"  class="card-img-top testimonial" alt="...">
+                    <img src="../testimonialpdf/test3.png"  class="card-img-top testimonial" alt="Preview of Testimonial 4">
                     <div class="card-body">
                         <h5 class="card-title">Testimonial 4</h5>
                         <p class="card-text">Written by Mr Lee Kong Huat</p>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#Modal4"  data-bs-target="#Modal4">View</button>
-                        <div class="modal fade" id="Modal4" tabindex="-1" aria-labelledby="exampleModalLabel6" aria-hidden="true">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-target="#testiModal4"  data-bs-target="#testiModal4">View</button>
+                        <div class="modal fade" id="testiModal4" tabindex="-1" aria-labelledby="testiModalLabel4" aria-hidden="true">
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel6">Testimonial 4</h5>
+                                        <h5 class="modal-title" id="testiModalLabel4">Testimonial 4</h5>
                                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                     </div>
                                     <div class="modal-body">
@@ -504,7 +504,7 @@
                 <div class="card mb-3 contactbox">
                     <div class="row">
                         <div class="col-lg-7 col-sm-12 d-flex" >
-                            <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" class="img-fluid"  alt="...">
+                            <img src="../aboutmephoto/-42ab6edb1dae41de.jpg" class="img-fluid"  alt="Image of Northeastern's park">
                         </div>
                         <div class="col-lg-5 col-sm-12" >
 
@@ -532,7 +532,7 @@
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg" class="rounded me-2 toastprofile" alt="...">
+            <img src="../profilepic/profile.jpg" class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
