--- a/html-files/feedback.html
+++ b/html-files/feedback.html
@@ -20,8 +20,8 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | Feedback&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | Feedback&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -47,7 +47,7 @@
                 </ul>
 
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -100,7 +100,7 @@
                     <div class="row row-cols-3 row-cols-md-3 " id="tr">
                         <div class="col">
                             <div class="card text-dark bg-light mb-3 maxwidth" >
-                                <div class="card-header"><img src="../profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="ZhuoFan">ZhuoFan</div>
+                                <div class="card-header"><img src="../profilepic/profile.jpg"  class="rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan</div>
                                 <div class="card-body">
                                     <p class="card-text">Excellent Website,I am so impressed by the design and layout of it.</p>
                                 </div>
@@ -112,7 +112,7 @@
                         <div class="col">
                             <div class="card text-dark bg-light mb-3 maxwidth" >
 
-                                <div class="card-header">   <img src="../feedback/1b935eaf194bb173.jpg"   class="rounded me-2 profilepicsizing" alt="JiaCheng">Jia Cheng</div>
+                                <div class="card-header">   <img src="../feedback/1b935eaf194bb173.jpg"   class="rounded me-2 profilepicsizing" alt="Image of JiaCheng's profile picture">Jia Cheng</div>
                                 <div class="card-body">
 
                                     <p class="card-text">This is the first website that have extremely amazed me,I never visit such a nice one</p>
@@ -130,7 +130,7 @@
                     <br><br>
                     <h1>Feedback Wall</h1>
                     <p>All feedback written will be shown at the wall above<br>Write your first feedback today!!</p>
-                    <img  onclick="window.location.href='feedback.html#feedbackform'" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
+                    <img  onclick="window.location.href='feedback.html#feedbackform'" src="../svg/arrow-down-square.svg" alt="Icon of arrow down" class="square">
                 </div>
             </div>
             </div>
@@ -419,12 +419,12 @@
                 <label class="formtext" for="agree">I've read and agreed to User Agreement and Privacy Policy</label>
               <br><br>
                 <input id="submit" class="submit" type="submit"/>
-                <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#exampleModal" data-bs-target="#exampleModal">User Agreement</button>
-                <div class="modal fade modal-dialog-scrollable" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <button type="button" id="btnmodel" class="btn btn-primary" data-bs-toggle="modal" data-target="#userModal" data-bs-target="#userModal">User Agreement</button>
+                <div class="modal fade modal-dialog-scrollable" id="userModal" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">User Agreement and Privacy Policy</h5>
+                                <h5 class="modal-title" id="userModalLabel">User Agreement and Privacy Policy</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
@@ -475,7 +475,7 @@
             </form>
         </div>
         <div class="col-sm-12 col-lg-6 text-end  ">
-            <img src="../feedback/kisspng-computer-icons-organization-exam-5ac9151ea24409.1751555515231275826647.png" class="height400">
+            <img src="../feedback/kisspng-computer-icons-organization-exam-5ac9151ea24409.1751555515231275826647.png" alt="Image of write box" class="height400">
         </div>
     </div>
 </div>
@@ -483,7 +483,7 @@
 <div class="toast-container">
     <div class="toast" id="sucessfd" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
@@ -501,7 +501,7 @@
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
