--- a/html-files/sp.html
+++ b/html-files/sp.html
@@ -20,8 +20,8 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="Image of ZhuoFan's profile picture">ZhuoFan | SP Life&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -46,7 +46,7 @@
                     </li>
                 </ul>
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -94,14 +94,14 @@
     <div class="container">
         <div class="row text-center textfly">
             <div class="col-12 text-center">
-                <img alt="DAAA Class Photo" class='greyscale daaacoverphoto' id="daaaimg" src="../spphoto/daaa.jpg" >
+                <img alt="Image of DAAA Class Photo" class='greyscale daaacoverphoto' id="daaaimg" src="../spphoto/daaa.jpg" >
 
             </div>
             <div class="col-12 text-center">
                 <br><br>
                 <h1>Singapore Polytechnic Experience</h1>
                 <p>View first impressions and things about Singapore Polytechnic</p>
-                <img  onclick="window.location.href='sp.html#spsection1';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
+                <img  onclick="window.location.href='sp.html#spsection1';" src="../svg/arrow-down-square.svg" alt="Image of arrow down" class="square">
             </div>
         </div>
     </div>
@@ -113,16 +113,16 @@
             <p>It has been 11 days since school started. When I first walked into SP on 14 April 2021 for a freshman orientation program, I was actually kind of excited to meet new people and see new things. My first impression of SP is that it is really big. There are many buildings in SP which some are pretty cool. They are built in different styles. When I was like trying to find my way to T22 that day, I spend like 20 minutes trying to find and walk there. There are so many stairs and turns which is kind of confusing. Luckily, after walking a few times, at least now I can find my way to T22, T21, T19, and FC6.My first impression towards my personal tutor and classmate are quite good as I felt that they are quite welcoming and nice.We bonded well together during the orientation programme despite it being quite short. </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end justify-content-end d-flex align-item-end">
-            <div id="carouselExampleSlidesOnly"   class="spcarouselphoto1 carousel slide carousel-fade" data-bs-ride="carousel">
+            <div id="carouselfade"   class="spcarouselphoto1 carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div data-bs-interval="1700" class="carousel-item active">
-                        <img src="../spphoto/sp.jpg"  class="d-block w-100 spcarouselphoto"  alt="...">
+                        <img src="../spphoto/sp.jpg"  class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Front">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/walk.jpg"   class="d-block w-100 spcarouselphoto"  alt="...">
+                        <img src="../spphoto/walk.jpg"   class="d-block w-100 spcarouselphoto"  alt="Image of Singapore Polytechnic Walk Way">
                     </div>
                     <div data-bs-interval="1700" class="carousel-item">
-                        <img src="../spphoto/t21.jpg" class="d-block w-100 spcarouselphoto" alt="...">
+                        <img src="../spphoto/t21.jpg" class="d-block w-100 spcarouselphoto" alt="Image of Singapore Polytechnic T21 block">
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
     <div class="container" >
         <div class="row" id="studysection">
             <div class="col-sm-12 col-md-6">
-<img src="../spphoto/Studying.svg" id="study"  alt="study" class="greyscale studysvg">
+<img src="../spphoto/Studying.svg" id="study"  alt="Image of studying" class="greyscale studysvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
     <h1><span class="orangered">Classmates</span> And <span class="purplecolor">Classroom</span></h1>
@@ -150,7 +150,7 @@
     <p>Well, for the lessons, the lessons in SP are very intensive, there are a lot of things about self-directed learning and personal responsibility so time management is important. We need to do extra search-ups after school so that we will have a better understanding of things taught in class. Additionally, the people in my class are all muggers so since the first week of school, I had been staying up till 2 am to do my module work. With CA2, coming in less than a month, the workload has become heavier and more time has to be spent. For poly, it is unlike secondary when your teachers will chase you for your homework if you never do. In SP, everything is on yourself, you need to take the initiative to check on various things and if you are late for an assignment, it is equivalent to 0 marks. However, the teachers I have met are really kind as they answered all the doubts I have in lessons and have tried to help me a lot with the assignments.</p>
 </div>
         <div class="col-sm-12 col-md-6 d-flex justify-content-end align-content-end ">
-            <div  class="  singaporepoly" id="singaporepoly" ></div>
+            <div  class="singaporepoly" id="singaporepoly" ></div>
         </div>
     </div>
 </div>
@@ -158,7 +158,7 @@
     <div class="container" id="foodsection">
         <div class="row">
             <div class="col-sm-12 col-md-6">
-<img src="../spphoto/fast-food.svg"  id="food" alt="food" class="greyscale foodsvg">
+<img src="../spphoto/fast-food.svg"  id="food" alt="Image of Food" class="greyscale foodsvg">
             </div>
 <div class="col-sm-12 col-md-6 text-end">
     <h1><span class="golden">Food</span> In SP</h1>
@@ -175,7 +175,7 @@
     <p>Well, SP is really big and I have just only explored a small part of it (sometimes I still get lost) so in the next 3 years of polytechnic life, there is a lot for me to explore. Academics-wise, I will put in 120% in every assignment, hopefully, I can get a 4.0 GPA in the end, continue my studies and eventually achieve my dream.</p>
 </div>
         <div class="col-sm-12 col-md-6 text-end ">
-            <img src="../spphoto/sp-logo.png" alt="sp logo" class="splogo">
+            <img src="../spphoto/sp-logo.png" alt="Image of Singapore Polytechnic logo" class="splogo">
         </div>
     </div>
 </div>
@@ -183,7 +183,7 @@
 
     <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of ZhuoFan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
