--- a/html-files/future.html
+++ b/html-files/future.html
@@ -20,8 +20,8 @@
 <header>
     <nav id='nav' class="navbar py-4 navbar-expand-md navbar-light fixed-top bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"  alt="ZhuoFan">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"  alt="Image of ZhuoFan's profile picture">ZhuoFan | Future Prospect&nbsp;&nbsp;&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -45,11 +45,8 @@
                         <a class="nav-link" href="feedback.html" >Feedback</a>
                     </li>
                 </ul>
-                </ul>
-                </ul>
-                </ul>
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -100,7 +97,7 @@
                 <div class="col-12 text-center ">
                     <div class="container rocket" id="rocket">
                         <div id="innerrocket">
-                            <img src="../secondaryschoolphoto/favpng_rocket-spacecraft-black-and-white-clip-art.png" class="width50"  >
+                            <img alt="Image of rocket" src="../secondaryschoolphoto/favpng_rocket-spacecraft-black-and-white-clip-art.png" class="width50"  >
                             <div class="" id="line"></div>
                         </div>
                     </div>
@@ -109,7 +106,7 @@
                     <br><br>
                     <h1>Future Career</h1>
                     <p>View my current course and my future prospect.</p>
-                    <img  onclick="window.location.href='future.html#daaareflection';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
+                    <img  onclick="window.location.href='future.html#daaareflection';" src="../svg/arrow-down-square.svg" alt="Icon of arrow down" class="square">
 
                 </div>
             </div>
@@ -140,7 +137,7 @@
             </p>
         </div>
         <div class="col-md-6 col-sm-12 text-end " >
-            <img src="../spphoto/thumbnail-daaa.jpg" id="daaaphoto">
+            <img alt="Image of DAAA Course Info" src="../spphoto/thumbnail-daaa.jpg" id="daaaphoto">
 
         </div>
     </div>
@@ -151,7 +148,7 @@
             <div class="catt col-lg-3 col-md-6 col-sm-6" >
                 <div class="card" id='card1' style="width: 20rem; height: 25rem;">
                     <div id="card1font">
-                        <img src="../spphoto/sp.jpg"  class="card-img-top cardimg1" alt="...">
+                        <img src="../spphoto/sp.jpg"  class="card-img-top cardimg1" alt="Image of Singapore Polytechnic ">
                         <div class="card-body">
                             <h3 class="card-title">First Impression</h3>
                         </div>
@@ -159,7 +156,7 @@
                     <div id="card1backside">
                         <div class="container row aligncard">
                             <div class="text-center">
-                                <img src="../cardicons/landscape.svg" class="cardimagestyle">
+                                <img src="../cardicons/landscape.svg" alt="A icon showing landscape" class="cardimagestyle">
                                 <p><strong>When I first walked into SP on 14 April 2021 for the <span class="royalblue">freshman orientation program</span>, I was actually  <span class="mediumgreen">kind of excited </span> to meet new people and see new things.</strong></p>
                             </div>
                             <div class="col text-center">
@@ -172,7 +169,7 @@
             <div class="catt col-lg-3 col-md-6 col-sm-6" >
                 <div class="card" id='card2' style="width: 20rem; height: 25rem;">
                     <div id="card2font">
-                        <img src="../spphoto/daaa.jpg"  class="card-img-top cardimg1" alt="...">
+                        <img src="../spphoto/daaa.jpg"  class="card-img-top cardimg1" alt="DAAA/FT/1A/04 AY2021 Class Photo">
                         <div class="card-body">
                             <h3 class="card-title">My Classmates</h3>
                         </div>
@@ -180,7 +177,7 @@
                     <div id="card2backside">
                         <div class="container row aligncard">
                             <div class="text-center">
-                                <img src="../cardicons/collaboration.svg" class="cardimagestyle">
+                                <img src="../cardicons/collaboration.svg" alt="A icon showing collaborations" class="cardimagestyle">
                                 <p><strong>My classmates all come from <span class="orange">different backgrounds</span>.For some of them,we have <span class="red">already</span> knew each other previously.Know more about how my classmates are.</strong></p>
 
                             </div>
@@ -210,7 +207,7 @@
         </div>
         <div class="col-sm-12 col-md-6 text-end">
             <!----<a href="https://iconscout.com/icons/cloud" target="_blank">Cloud Icon</a> by <a href="https://iconscout.com/contributors/chamedesign" target="_blank">Chameleon Design</a>--->
-            <img class="greyscale cloudsvg" src="../prospectphoto/cloud.svg" id='cloud' >
+            <img class="greyscale cloudsvg" alt="A image showing cloud computing" src="../prospectphoto/cloud.svg" id='cloud' >
         </div>
     </div>
 </div>
