--- a/html-files/index.html
+++ b/html-files/index.html
@@ -33,8 +33,8 @@
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing" alt="ZhuoFan">ZhuoFan | Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing" alt="Image of ZhuoFan's profile picture">ZhuoFan | Home&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -61,7 +61,7 @@
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Image of search"/>
                 </form>
             </div>
         </div>
@@ -118,7 +118,7 @@
     <h1 id="enlarge">CHEN ZHUOFAN</h1> <br> <br>
     <h3>My Experience in Poly and My Career Prospect</h3><br><br>
     <!--Upon clicked ,slide to the first section-->
-    <img onclick="window.location.href='index.html#aboutmesum';"  src="../svg/arrow-down-square.svg" alt="arrow" class="arrowdown">
+    <img onclick="window.location.href='index.html#aboutmesum';"  src="../svg/arrow-down-square.svg" alt="Image of arrow down" class="arrowdown">
 </div>
 
 <!--First section in Page-->
@@ -163,44 +163,44 @@
        </div>
 <!--Unconfirmed div ,may consider changing in later date-->
            <div class="col-12 container text-center d-flex justify-content-center">
-               <div id="carouselExampleCaptions" class="carousel slide carousel-fade carouselsetting"  data-bs-ride="carousel">
+               <div id="Captions" class="carousel slide carousel-fade carouselsetting"  data-bs-ride="carousel">
                    <!--Number of indicator-->
                    <div class="carousel-indicators">
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                       <button type="button" data-bs-target="#Captions" data-bs-slide-to="10" aria-label="Slide 11"></button>
                    </div>
                    <!--Captions for different image while slideshow-->
                    <div class="carousel-inner">
                        <div class="carousel-item active" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg" style="height:500px;" class="d-block w-100" alt="Image of Secondary One Orientation Programme 2019 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg" style="height:500px;"  class="d-block w-100" alt="Image of 3 Opal Racial Harmony Day 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5 style="color:black;">3 Opal Racial Harmony Day 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/im.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/im.jpg" style="height:500px;"  class="d-block w-100" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg" style="height:500px;"  class="d-block w-100" alt="Image of 15th Student Council Investiture 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>15th Student Council Investiture 2019</h5>
 
@@ -208,46 +208,46 @@
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  style="height:500px;" class="d-block w-100" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"  style="height:500px;" class="d-block w-100" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  style="height:500px;" class="d-block w-100" alt="Image of SOOP 2019 Organising Committee">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg" style="height:500px;"  class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg" style="height:500px;"  class="d-block w-100" alt="Photo of National Day Celebration 2020 ">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>National Day Celebration 2020</h5>
                            </div>
                        </div>
 
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"  style="height:500px;" class="d-block w-100" alt="Image of Dinner of Meet The Parent Session 2020">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Dinner of Meet The Parent Session 2020</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg" style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg" style="height:500px;" class="d-block w-100" alt="Image of Chinese New Year Celebration Performance 2019">
                            <div class="carousel-caption d-none d-md-block">
                                <h5>Chinese New Year Celebration Performance 2019</h5>
                            </div>
                        </div>
                        <div class="carousel-item" data-bs-interval="2000">
-                           <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"  style="height:500px;" class="d-block w-100" alt="...">
+                           <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"  style="height:500px;" class="d-block w-100" alt="Image of SLTC 2020 Facilitator Committee ">
                            <div class="carousel-caption d-none d-md-block">
-                               <h5>Student Leader Training Camp <br>Facilitator Committee</h5>
+                               <h5>Student Leader Training Camp 2020 <br>Facilitator Committee</h5>
                            </div>
                        </div>
                    </div>
@@ -295,7 +295,7 @@
  <!--Card 1 (on hover flip to backside-->
     <div class="card" id='card1' style="width:20rem;height:25rem;" >
       <div id="card1font">
-        <img src="../optionspic/education-2.jpg" class="card-img-top" alt="...">
+        <img src="../optionspic/education-2.jpg" class="card-img-top" alt="Image of books">
         <div class="card-body">
             <h3 class="card-title">Education Background</h3>
         </div>
@@ -303,7 +303,7 @@
         <div id="card1backside">
             <div class="container row aligncard">
                 <div class="text-center">
-                    <img src="../cardicons/graduation_cap.svg" class="cardimagestyle">
+                    <img src="../cardicons/graduation_cap.svg" alt="Icon of graduation caps" class="cardimagestyle">
                     <p><strong>I am a student of <span class="yellowcolor"> Dunearn Secondary School</span> from 2017 to 2020 and currently a student of <span class="darkcyn">Singapore Polytechnic</span>. Know more about my experience.</strong></p>
                     <div class="col text-center">
                         <button type="button" class="btn btn-warning" onclick="window.location.href='secondary.html'">Dunearn Secondary</button>
@@ -319,7 +319,7 @@
             <!--Card 2 (on hover flip to backside-->
             <div class="card " id="card3" style="width:20rem;height:25rem;">
           <div id="card3font">
-            <img src="../optionspic/f46577af-22d1-4883-a.png"  class="card-img-top githubimg" alt="...">
+            <img src="../optionspic/f46577af-22d1-4883-a.png"  class="card-img-top githubimg" alt="Image of Github">
             <div class="card-body">
                 <h3 class="card-title">My Github</h3>
             </div>
@@ -327,7 +327,7 @@
             <div id="card3backside" >
                 <div  class="container row aligncard ">
     <div class="text-center">
-    <img src='../cardicons/command_line.svg' class="cardimagestyle">
+    <img src='../cardicons/command_line.svg' alt="Icon of command line" class="cardimagestyle">
     <p><strong>I have use Github for couples of years.Mostly involved in <span class="springgreen">Android development</span> and <br> <span class="cornflowerblue"> C Language </span> projects.Take a look at some of my projects.</strong></p>
     </div>
                <div class="col text-center">
@@ -341,7 +341,7 @@
             <!--Card 3 (on hover flip to backside)-->
             <div class="card" id="card2" style="width:20rem;height:25rem;">
                <div id="card2font">
-                <img src="../optionspic/1_92vGicRHnNa6JHLGGiIb_A.jpeg" class="card-img-top githubimg" alt="...">
+                <img src="../optionspic/1_92vGicRHnNa6JHLGGiIb_A.jpeg" class="card-img-top githubimg" alt="Image of Achievement">
                 <div class="card-body">
                     <h3 class="card-title">Achievements</h3>
                 </div>
@@ -349,7 +349,7 @@
                 <div id="card2backside">
                     <div class="container row aligncard">
                         <div class="text-center">
-                            <img src="../cardicons/diploma_2.svg" class="cardimagestyle">
+                            <img src="../cardicons/diploma_2.svg" alt="Icon of certificates" class="cardimagestyle">
                             <p><strong>From 2017 to present,I have participated in a lot of Mathematics and Science competition like <span class="purplecolor">Australia Big Science Competition</span> and <br> <span class="pinkred">ICAS Mathematics Competition</span>.View more of my achievements here!</strong></p>
                         </div>
                         <div class="col text-center">
@@ -366,7 +366,7 @@
             <!--Card 4 (on hover flip to backside-->
             <div class="card" id='card4' style="width:20rem;height:25rem;">
              <div id="card4font">
-                <img src="../optionspic/thumbnail-daaa.jpg"  class="card-img-top githubimg" alt="...">
+                <img src="../optionspic/thumbnail-daaa.jpg"  class="card-img-top githubimg" alt="Image of DAAA course info">
                 <div class="card-body">
                     <h3 class="card-title">My Course</h3>
                 </div>
@@ -374,7 +374,7 @@
                 <div id="card4backside">
                 <div class="container row aligncard">
                     <div class="text-center">
-                        <img src="../cardicons/document.svg" class="cardimagestyle">
+                        <img src="../cardicons/document.svg" alt="Icon of document" class="cardimagestyle">
                         <p><strong>I am a AY2021 student in the course of <span class="golden">Diploma in Applied AI and Analytics</span>. School have started for a few months.Learn more about how my course is like.</strong></p>
 
                     </div>
@@ -395,7 +395,7 @@
             <div class="toast" id="welcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
                 <div class="toast-header">
                     <!--Header:Profile pic + name +time-->
-                    <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+                    <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
                     <strong class="mr-auto">ZhuoFan</strong>
 
                     <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
