--- a/html-files/secondary.html
+++ b/html-files/secondary.html
@@ -33,8 +33,8 @@
         <!--Remove the 20% gaps for navigation bar on page-->
         <div class="container-fluid">
             <!-- Let profile picture to appear with page title-->
-            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan">ZhuoFan | Secondary School</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" href="#"><img src="../profilepic/profile.jpg" class="d-inline-block align-text-top rounded me-2 profilepicsizing"   alt="ZhuoFan's profile picture">ZhuoFan | Secondary School</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -61,7 +61,7 @@
                 </ul>
                 <!--Search button-->
                 <form class="d-flex">
-                    <img src="../searchbaricons/search.png" id="search" alt="search"/>
+                    <img src="../searchbaricons/search.png" id="search" alt="Icon of search"/>
                 </form>
             </div>
         </div>
@@ -113,44 +113,44 @@
 <!--Slideshow element-->
 <div class="container-fluid grey margintop textfly1" >
     <div class="container d-flex justify-content-center">
-        <div id="carouselExampleCaptions" class="carousel slide slidecarousell" data-bs-ride="carousel">
+        <div id="Captions" class="carousel slide slidecarousell" data-bs-ride="carousel">
            <!--Number of indicator-->
             <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="7" aria-label="Slide 8"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="8" aria-label="Slide 9"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="9" aria-label="Slide 10"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="10" aria-label="Slide 11"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="7" aria-label="Slide 8"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="8" aria-label="Slide 9"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="9" aria-label="Slide 10"></button>
+                <button type="button" data-bs-target="#Captions" data-bs-slide-to="10" aria-label="Slide 11"></button>
             </div>
             <!--Captions for different image while slideshow-->
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/10742781328_IMG_7182.jpg"  class="d-block w-100 carouselphotosize" alt="Image of Secondary One Orientation Programme 2019 ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20210606_195424.jpg"  class="d-block w-100 carouselphotosize" alt="Image of 3 Opal Racial Harmony Day 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5 style="color:black;">3 Opal Racial Harmony Day 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/im.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/im.jpg"  class="d-block w-100 carouselphotosize" alt="Image of 15th Student Council Investiture 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg"  class="carouselphotosize d-block w-100" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/2019-07-02%2006.04.58%202079138951209552530_1490202012.jpg"  class="carouselphotosize d-block w-100" alt="Image of 15th Student Council Investiture 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>15th Student Council Investiture 2019</h5>
 
@@ -158,46 +158,46 @@
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/fr.jpg"  class="d-block w-100 carouselphotosize" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"   class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190204-WA0058.jpg"   class="d-block w-100 carouselphotosize" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190117-WA0015.jpg"  class="d-block w-100 carouselphotosize" alt="Image of SOOP 2019 Organising Committee">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Secondary One Orientation Programme 2019 <br>Organising Committee</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg"   class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG_20190808_093801.jpg"   class="d-block w-100 carouselphotosize" alt="Image of National Day Celebration 2020">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>National Day Celebration 2020</h5>
                     </div>
                 </div>
 
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"   class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/IMG-20190125-WA0013%20(1).jpg"   class="d-block w-100 carouselphotosize" alt="Image of Dinner of Meet The Parent Session 2020 ">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Dinner of Meet The Parent Session 2020</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg"  class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/fr1.jpg"  class="d-block w-100 carouselphotosize" alt="Image of Chinese New Year Celebration Performance 2019">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Chinese New Year Celebration Performance 2019</h5>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"   class="d-block w-100 carouselphotosize" alt="...">
+                    <img src="../secondaryschoolphoto/presentationcarousel/689a1c2e-433b-4aab-8c74-7db72595ddfd.jpg"   class="d-block w-100 carouselphotosize" alt="Image of SLTC 2020 Facilitator Committee">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Student Leader Training Camp <br>Facilitator Committee</h5>
+                        <h5>Student Leader Training Camp 2020 <br>Facilitator Committee</h5>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
         <div class=" text-center">
             <p>Swipe to know more</p>
             <!--Upon clicked ,slide to the first section-->
-            <img  onclick="window.location.href='secondary.html#secreflection';" src="../svg/arrow-down-square.svg" alt="arrow" class="square">
+            <img  onclick="window.location.href='secondary.html#secreflection';" src="../svg/arrow-down-square.svg" alt="Image of arrow down" class="square">
         </div>
     </div>
 </div>
@@ -242,7 +242,7 @@
 
         <!--Corresponding images another half in First section-->
         <div class=" col-md-6 col-sm-12 text-end">
-<img src="../secondaryschoolphoto/kissclipart-graduation-vector-png-clipart-square-academic-cap-cb399ded5d6237b4.png" class="academiccap">
+<img src="../secondaryschoolphoto/kissclipart-graduation-vector-png-clipart-square-academic-cap-cb399ded5d6237b4.png" alt="Image of graduation caps" class="academiccap">
         </div>
 
     </div>
@@ -362,7 +362,7 @@
             </div>
             <!--Photo at right occupying half of the line for medium size screen,and full line for small screen(next line)-->
             <div class="col-md-6 col-sm-12 text-end">
-                <img src="../secondaryschoolphoto/dunearnlogo.png" class="dunearnlogo">
+                <img src="../secondaryschoolphoto/dunearnlogo.png" alt="Image of Dunearn Secondary School logo" class="dunearnlogo">
             </div>
         </div>
     </div>
@@ -375,7 +375,7 @@
     <div class="toast" id="secwelcome" role="alert"  data-bs-autohide="false" aria-live="assertive" aria-atomic="true" >
         <div class="toast-header">
             <!--Header:Profile pic + name +time-->
-            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="...">
+            <img src="../profilepic/profile.jpg"  class="rounded me-2 toastprofile" alt="Image of Zhuofan's profile picture">
             <strong class="mr-auto">ZhuoFan</strong>
 
             <small>&nbsp; Now &nbsp;&nbsp;&nbsp;&nbsp;</small>
